<resources>
    <string name="app_name">walk-walk-revolution</string>
    <string name="home_but_routes">Home</string>
    <string name="routes_but_routes">Routes</string>
    <string name="textName">Name: *</string>
    <string name="txtName"> </string>
    <string name="textStartPoint">Starting Point:</string>
    <string name="txtStartPoint"> </string>
    <string name="textFeature">Features:</string>
    <string name="groupLoop"> </string>
    <string name="textLoop">Loop</string>
    <string name="textOut">Out-and-Back</string>
    <string name="textFlat">Flat</string>
    <string name="textHilly">Hilly</string>
    <string name="textStreet">Street</string>
    <string name="textTrail">Trail</string>
    <string name="textSurface1">Even Surface</string>
    <string name="textSurface2">Uneven Surface</string>
    <string name="textEasy">Easy</string>
    <string name="textModerate">Moderate</string>
    <string name="textDifficult">Difficult</string>
    <string name="textNote">Notes: </string>
    <string name="txtNote"> </string>
    <string name="cancel">Cancel</string>
    <string name="startWalk">Start Walk</string>
    <string name="textWalk">Walk</string>
    <string name="textTimer">Timer</string>
    <string name="save">Save</string>
    <string name="viewRoute">View Route</string>
    <string name="stopWalk">Start Walk</string>
    <string name="title_activity_home">Home</string>
    <string name="acceptPropose">Accept</string>
    <string name="declineProposeBadTime">Decline (bad time)</string>
    <string name="declineProposeRoute">Decline (not a good route for me)</string>
    <string name="proposedWalk">Proposed Walk</string>
    <string name="walkName">Walk: </string>
    <string name="nameWalk">Walk Name</string>
    <string name="ownerName">Proposer: </string>
    <string name="nameOwner">Proposer Name</string>
    <string name="date">Date:</string>
    <string name="textDate">Date</string>
    <string name="time">Time:</string>
    <string name="textTime">Time</string>
    <string name="start_point_text">Starting Point</string>
    <string name="start_point">Starting Point:</string>
    <string name="scheduleWalk">Schedule Walk</string>
    <string name="withdrawWalk">Withdraw Walk</string>
    <string name="scheduledWalk">Scheduled Walk</string>
    <string name="propose_walk">Propose Walk</string>
...
