...
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Email: "
                android:textSize="20dp" />  -->

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                />

            <!--<TextView
...
