...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/routes_but_home"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView

        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="Home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/start_walk"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="4dp"
        android:text="Start Walk"
        app:layout_constraintBottom_toTopOf="@+id/home_but_home"
        app:layout_constraintEnd_toStartOf="@+id/end_walk"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/end_walk"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="End Walk"
        app:layout_constraintBottom_toTopOf="@+id/routes_but_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_walk" />

    <TextView
        android:id="@+id/recent_stats_text"
...
