...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtName"
        android:hint="Walk Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
...
        app:layout_constraintLeft_toLeftOf="@+id/inputName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/inputStartPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtStartPoint"
        android:hint="Starting Point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFeature"
        app:layout_constraintVertical_bias="0.04">

        <RadioButton
            android:id="@+id/loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textLoop"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
...
        app:layout_constraintLeft_toLeftOf="@+id/textStartPoint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFeature"
        app:layout_constraintVertical_bias="0.04">

        <RadioButton
            android:id="@+id/flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFlat"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupLoop"
        app:layout_constraintVertical_bias="0.04">

        <RadioButton
            android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textStreet"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
...
        app:layout_constraintLeft_toLeftOf="@+id/textStartPoint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupFlat"
        app:layout_constraintVertical_bias="0.04">

        <RadioButton
            android:id="@+id/evensurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSurface1"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textEasy"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
            android:id="@+id/moderate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textModerate"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
...
